--- a/Microproject.ipynb
+++ b/Microproject.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOA7KlzlJeKOs+U9I579xei",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN4p+ceNwNC+LvbpByVKcXt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,9 +56,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rIOUJctw-7g4",
-        "outputId": "839817dc-8645-4fd9-b984-dcbb6f9b49d9"
+        "outputId": "bf8daf5d-8585-454d-ce62-12bb3cce826c"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,18 +66,8 @@
           "text": [
             "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (24.0)\n",
             "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[0mCollecting pyspark\n",
-            "  Downloading pyspark-3.5.1.tar.gz (317.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.0/317.0 MB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[0mRequirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.5.1)\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
-            "Building wheels for collected packages: pyspark\n",
-            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.5.1-py2.py3-none-any.whl size=317488491 sha256=33cabb3940ae8806c1ff409fcf0b820b2a0beacab258b392a28917e4b89df70d\n",
-            "  Stored in directory: /root/.cache/pip/wheels/80/1d/60/2c256ed38dddce2fdd93be545214a63e02fbd8d74fb0b7f3a6\n",
-            "Successfully built pyspark\n",
-            "Installing collected packages: pyspark\n",
-            "Successfully installed pyspark-3.5.1\n",
             "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
@@ -85,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "AQAK0lo52uuK"
       },
@@ -106,16 +97,16 @@
         "\n",
         "sc.addFile(path)\n",
         "df = spark.read.csv(path, header=True, inferSchema= True)\n",
-        "df.show()"
+        "df.show(10)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Fc_SIsA-Rh_",
-        "outputId": "ae6a0953-237e-4dde-de7f-bd88b8c02a90"
+        "outputId": "993054b9-aab3-41a3-e5ca-37ceb96c9cec"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,20 +125,61 @@
             "|   63280108|     86|        6092518|    Medical Incident|2006-11-24 00:00:00|2006-11-24 00:00:00|2006-11-24 10:34:41|2006-11-24 10:37:27|2006-11-24 10:38:09|2006-11-24 10:41:56|2006-11-24 11:10:50|2006-11-24 11:23:03|2006-11-24 11:57:49|      Code 2 Transport|2006-11-24 12:14:43|    GOUGH ST/PAGE ST|  SF|              94102|      B02|          36|3313|                1|       1|             2|    true|           NULL|               1|       MEDIC|                             1|                       2|                  5|                     Hayes Valley| 063280108-86|POINT (-122.42241...|2024-02-05 03:27:52|2024-02-05 10:56:25|                          9|\n",
             "|   63260260|    T03|        6092099|    Medical Incident|2006-11-22 00:00:00|2006-11-22 00:00:00|2006-11-22 18:54:35|2006-11-22 18:56:20|2006-11-22 18:56:28|               NULL|               NULL|               NULL|               NULL|                 Other|2006-11-22 18:57:32|LARKIN ST/GOLDEN ...|  SF|              94102|      B02|           3|1644|                3|       3|             3|   false|           NULL|               1|       TRUCK|                             3|                       2|                  6|                       Tenderloin|063260260-T03|POINT (-122.41714...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         36|\n",
             "|   63270238|    E16|        6092335|   Traffic Collision|2006-11-23 00:00:00|2006-11-23 00:00:00|2006-11-23 15:44:42|2006-11-23 15:44:42|2006-11-23 15:46:45|2006-11-23 15:47:58|2006-11-23 15:50:31|               NULL|               NULL|                 Other|2006-11-23 16:08:03|BAKER ST/MARINA BLVD|  SF|              94123|      B04|          16|4323|                2|       2|             2|   false|           NULL|               1|      ENGINE|                             1|                       4|                  2|                           Marina|063270238-E16|POINT (-122.44729...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         13|\n",
-            "|   63120281|    E02|        6088129|Structure Fire / ...|2006-11-08 00:00:00|2006-11-08 00:00:00|2006-11-08 14:11:31|2006-11-08 14:11:31|2006-11-08 14:11:39|               NULL|               NULL|               NULL|               NULL|                 Other|2006-11-08 14:13:58|UNION ST/FRANKLIN ST|  SF|              94123|      B04|          16| 323|                3|       3|             3|   false|           NULL|               1|      ENGINE|                             4|                       4|                  2|                           Marina|063120281-E02|POINT (-122.42563...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         13|\n",
-            "|   63130327|    E01|        6088472|    Medical Incident|2006-11-09 00:00:00|2006-11-09 00:00:00|2006-11-09 17:54:59|2006-11-09 17:56:12|2006-11-09 17:56:21|2006-11-09 17:57:12|               NULL|               NULL|               NULL|                 Other|2006-11-09 18:17:57|   04TH ST/HOWARD ST|  SF|              94103|      B03|           1|2214|                3|       3|             3|    true|           NULL|               1|      ENGINE|                             2|                       3|                  6|             Financial Distric...|063130327-E01|POINT (-122.40271...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         34|\n",
-            "|   63190200|    M38|        6090094|    Medical Incident|2006-11-15 00:00:00|2006-11-15 00:00:00|2006-11-15 13:06:04|2006-11-15 13:08:05|2006-11-15 13:09:42|2006-11-15 13:12:26|2006-11-15 13:18:34|2006-11-15 13:42:57|               NULL|      Code 2 Transport|2006-11-15 14:17:54|CALIFORNIA ST/COM...|  SF|              94118|      B07|          10| 449|                1|       1|             2|    true|           NULL|               1|       MEDIC|                             1|                       7|                  2|                 Presidio Heights|063190200-M38|POINT (-122.45586...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         31|\n",
-            "|   63270326|    E08|        6092391|              Alarms|2006-11-23 00:00:00|2006-11-23 00:00:00|2006-11-23 19:54:41|2006-11-23 19:56:38|2006-11-23 19:56:47|2006-11-23 19:58:08|2006-11-23 19:59:44|               NULL|               NULL|                 Other|2006-11-23 20:08:17|    04TH ST/BERRY ST|  SF|              94158|      B03|           8|2171|                3|       3|             3|    true|           NULL|               1|      ENGINE|                             2|                       3|                  6|                      Mission Bay|063270326-E08|POINT (-122.39336...|2024-02-05 03:27:52|2024-02-05 10:56:25|                          4|\n",
-            "|   63280262|    E03|        6092629|    Medical Incident|2006-11-24 00:00:00|2006-11-24 00:00:00|2006-11-24 18:22:06|2006-11-24 18:23:53|2006-11-24 18:24:05|2006-11-24 18:24:58|2006-11-24 18:27:16|               NULL|               NULL|                 Other|2006-11-24 18:32:58|EDDY ST/LEAVENWOR...|  SF|              94102|      B02|           3|1545|                3|       3|             3|    true|           NULL|               1|      ENGINE|                             1|                       2|                  6|                       Tenderloin|063280262-E03|POINT (-122.41424...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         36|\n",
-            "|   63230145|    M07|        6091184|    Medical Incident|2006-11-19 00:00:00|2006-11-19 00:00:00|2006-11-19 11:05:44|2006-11-19 11:07:36|2006-11-19 11:08:15|2006-11-19 11:09:12|               NULL|               NULL|               NULL|             Cancelled|2006-11-19 11:10:30|      NOE ST/24TH ST|  SF|              94114|      B06|          11|5522|                1|       1|             2|    true|           NULL|               1|       MEDIC|                             1|                       6|                  8|                       Noe Valley|063230145-M07|POINT (-122.43188...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         22|\n",
-            "|   63170237|    E15|        6089540|    Medical Incident|2006-11-13 00:00:00|2006-11-13 00:00:00|2006-11-13 14:50:38|2006-11-13 14:52:49|2006-11-13 14:53:02|2006-11-13 14:54:06|2006-11-13 14:58:14|               NULL|               NULL|                 Other|2006-11-13 15:13:02| AVALON AVE/PARIS ST|  SF|              94112|      B09|          32|6114|                3|       3|             3|    true|           NULL|               1|      ENGINE|                             2|                       9|                 11|                        Excelsior|063170237-E15|POINT (-122.43096...|2024-02-05 03:27:52|2024-02-05 10:56:25|                          7|\n",
-            "|   63120347|    B04|        6088177|Structure Fire / ...|2006-11-08 00:00:00|2006-11-08 00:00:00|2006-11-08 17:22:57|2006-11-08 17:23:45|2006-11-08 17:23:53|2006-11-08 17:25:31|               NULL|               NULL|               NULL|                 Other|2006-11-08 17:28:42|   FERN ST/LARKIN ST|  SF|              94109|      B04|           3|1636|                3|       3|             3|   false|           NULL|               1|       CHIEF|                             5|                       4|                  3|                         Nob Hill|063120347-B04|POINT (-122.41856...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         21|\n",
-            "|   63220116|    E12|        6090853|    Medical Incident|2006-11-18 00:00:00|2006-11-18 00:00:00|2006-11-18 09:02:23|2006-11-18 09:02:37|2006-11-18 09:02:48|2006-11-18 09:04:28|2006-11-18 09:07:22|               NULL|               NULL|                 Other|2006-11-18 09:20:01|FULTON ST/WILLARD ST|  SF|              94118|      B07|          21|4561|                E|       E|             3|    true|           NULL|               1|      ENGINE|                             2|                       7|                  1|                 Golden Gate Park|063220116-E12|POINT (-122.45628...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         12|\n",
-            "|   63250105|    M18|        6091702|    Medical Incident|2006-11-21 00:00:00|2006-11-21 00:00:00|2006-11-21 09:27:25|2006-11-21 09:28:47|2006-11-21 09:29:32|2006-11-21 09:32:13|2006-11-21 09:36:51|2006-11-21 09:47:05|2006-11-21 09:57:16|      Code 2 Transport|2006-11-21 10:22:14|    35TH AVE/ANZA ST|  SF|              94121|      B07|          34|7251|                3|       3|             3|    true|           NULL|               1|       MEDIC|                             3|                       7|                  1|                   Outer Richmond|063250105-M18|POINT (-122.49531...|2024-02-05 03:27:52|2024-02-05 10:56:25|                         29|\n",
             "+-----------+-------+---------------+--------------------+-------------------+-------------------+-------------------+-------------------+-------------------+-------------------+-------------------+-------------------+-------------------+----------------------+-------------------+--------------------+----+-------------------+---------+------------+----+-----------------+--------+--------------+--------+---------------+----------------+------------+------------------------------+------------------------+-------------------+---------------------------------+-------------+--------------------+-------------------+-------------------+---------------------------+\n",
-            "only showing top 20 rows\n",
+            "only showing top 10 rows\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Trying to use the link form my github:"
+      ],
+      "metadata": {
+        "id": "RPNSiUxoU8S1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "data_file_https_url = \"https://github.com/GePajarinen/Studying-Spark/blob/main/data_scr/nuek-vuh3.csv\"\n",
+        "sc.addFile(data_file_https_url)\n",
+        "filePath  = 'file://' +SparkFiles.get('nuek-vuh3.csv')\n",
+        "\n",
+        "print(SparkFiles.get('nuek-vuh3.csv'))\n",
+        "\n",
+        "tmpPath = SparkFiles.get('nuek-vuh3.csv')\n",
+        "#df2 = spark.read.csv(filePath, header=True, inferSchema= True)\n",
+        "df2 = spark.read.csv(tmpPath, header=True, inferSchema= True)\n",
+        "df2.show()\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "iHRGkt1rRZfZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "880f1ef3-6dff-4723-b13d-0d6df1b8719f"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\ndata_file_https_url = \"https://github.com/GePajarinen/Studying-Spark/blob/main/data_scr/nuek-vuh3.csv\"\\nsc.addFile(data_file_https_url)\\nfilePath  = \\'file://\\' +SparkFiles.get(\\'nuek-vuh3.csv\\')\\n\\nprint(SparkFiles.get(\\'nuek-vuh3.csv\\'))\\n\\ntmpPath = SparkFiles.get(\\'nuek-vuh3.csv\\')\\n#df2 = spark.read.csv(filePath, header=True, inferSchema= True)\\ndf2 = spark.read.csv(tmpPath, header=True, inferSchema= True)\\ndf2.show()\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -155,7 +187,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iHRGkt1rRZfZ"
+        "id": "_NpjnY-jVgGc"
       },
       "execution_count": null,
       "outputs": []
