--- a/Microproject.ipynb
+++ b/Microproject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN4p+ceNwNC+LvbpByVKcXt",
+      "authorship_tag": "ABX9TyPsThw6FcH0vm8zaMuPh4m0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rIOUJctw-7g4",
-        "outputId": "bf8daf5d-8585-454d-ce62-12bb3cce826c"
+        "outputId": "8d11f986-5972-4033-9c3b-f7deafca222d"
       },
       "execution_count": 1,
       "outputs": [
@@ -73,6 +73,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Load the given data file and create a Spark data frame:\n",
+        "Data info: https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3/about_data\n",
+        "\n",
+        "Download: https://data.sfgov.org/resource/nuek-vuh3.csv"
+      ],
+      "metadata": {
+        "id": "1hlZJRO6yuwa"
+      }
     },
     {
       "cell_type": "code",
@@ -104,9 +116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Fc_SIsA-Rh_",
-        "outputId": "993054b9-aab3-41a3-e5ca-37ceb96c9cec"
+        "outputId": "f8bf36b5-e149-46fe-8e91-30e600e4c6d2"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,11 +174,11 @@
         "id": "iHRGkt1rRZfZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 71
         },
-        "outputId": "880f1ef3-6dff-4723-b13d-0d6df1b8719f"
+        "outputId": "3da2e9b3-667e-4584-c267-f6188e796728"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,17 +191,346 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## 2. Use the Spark data frame to answer the following questions:\n",
+        "1. How many distinct types of calls were made to the fire department?\n"
+      ],
+      "metadata": {
+        "id": "9D0RGufD1lt3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WcxwFXIi2fv_",
+        "outputId": "58854939-e2ef-4db9-d7c4-9c8af6d1a7de"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- call_number: integer (nullable = true)\n",
+            " |-- unit_id: string (nullable = true)\n",
+            " |-- incident_number: integer (nullable = true)\n",
+            " |-- call_type: string (nullable = true)\n",
+            " |-- call_date: timestamp (nullable = true)\n",
+            " |-- watch_date: timestamp (nullable = true)\n",
+            " |-- received_dttm: timestamp (nullable = true)\n",
+            " |-- entry_dttm: timestamp (nullable = true)\n",
+            " |-- dispatch_dttm: timestamp (nullable = true)\n",
+            " |-- response_dttm: timestamp (nullable = true)\n",
+            " |-- on_scene_dttm: timestamp (nullable = true)\n",
+            " |-- transport_dttm: timestamp (nullable = true)\n",
+            " |-- hospital_dttm: timestamp (nullable = true)\n",
+            " |-- call_final_disposition: string (nullable = true)\n",
+            " |-- available_dttm: timestamp (nullable = true)\n",
+            " |-- address: string (nullable = true)\n",
+            " |-- city: string (nullable = true)\n",
+            " |-- zipcode_of_incident: integer (nullable = true)\n",
+            " |-- battalion: string (nullable = true)\n",
+            " |-- station_area: integer (nullable = true)\n",
+            " |-- box: integer (nullable = true)\n",
+            " |-- original_priority: string (nullable = true)\n",
+            " |-- priority: string (nullable = true)\n",
+            " |-- final_priority: integer (nullable = true)\n",
+            " |-- als_unit: boolean (nullable = true)\n",
+            " |-- call_type_group: string (nullable = true)\n",
+            " |-- number_of_alarms: integer (nullable = true)\n",
+            " |-- unit_type: string (nullable = true)\n",
+            " |-- unit_sequence_in_call_dispatch: integer (nullable = true)\n",
+            " |-- fire_prevention_district: string (nullable = true)\n",
+            " |-- supervisor_district: string (nullable = true)\n",
+            " |-- neighborhoods_analysis_boundaries: string (nullable = true)\n",
+            " |-- rowid: string (nullable = true)\n",
+            " |-- case_location: string (nullable = true)\n",
+            " |-- data_as_of: timestamp (nullable = true)\n",
+            " |-- data_loaded_at: timestamp (nullable = true)\n",
+            " |-- :@computed_region_ajp5_b2md: integer (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Temporary views in Spark SQL are session-scoped and will disappear if the session that creates it terminates. If you want to have a temporary view that is shared among all sessions and keep alive until the Spark application terminates, you can create a global temporary view. Global temporary view is tied to a system preserved database global_temp, and we must use the qualified name to refer it, e.g. SELECT * FROM global_temp.view1."
+      ],
+      "metadata": {
+        "id": "9JasCGr57_I1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.createOrReplaceGlobalTempView(\"fire_department\")\n",
+        "# with createGlobalTempView() -> Can not run more than once, cause AnalysisException: [TEMP_TABLE_OR_VIEW_ALREADY_EXISTS]\n",
+        "# Cannot create the temporary view `fire_department` because it already exists.\n",
+        "# Choose a different name, drop or replace the existing view,  or add the IF NOT EXISTS clause to tolerate pre-existing views."
+      ],
+      "metadata": {
+        "id": "jVI_qGqJ7mt5"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_call_types = spark.sql(\"SELECT DISTINCT call_type FROM global_temp.fire_department\")"
+      ],
+      "metadata": {
+        "id": "_2d2M_0s8yix"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_call_types.count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N04VvUHaBnSL",
+        "outputId": "c871379e-0102-4fcc-8fad-c82b6587d014"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "2. What are  distinct types of calls made to the fire department?\n"
+      ],
+      "metadata": {
+        "id": "3SfPufaH187d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_call_types.collect()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NzeZk3FL2gft",
+        "outputId": "9d917108-8ba3-4a4a-9613-7b72c0422a4f"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(call_type='Elevator / Escalator Rescue'),\n",
+              " Row(call_type='Structure Fire / Smoke in Building'),\n",
+              " Row(call_type='Administrative'),\n",
+              " Row(call_type='Alarms'),\n",
+              " Row(call_type='Odor (Strange / Unknown)'),\n",
+              " Row(call_type='Citizen Assist / Service Call'),\n",
+              " Row(call_type='Explosion'),\n",
+              " Row(call_type='Vehicle Fire'),\n",
+              " Row(call_type='Other'),\n",
+              " Row(call_type='Outside Fire'),\n",
+              " Row(call_type='Traffic Collision'),\n",
+              " Row(call_type='Gas Leak (Natural and LP Gases)'),\n",
+              " Row(call_type='Water Rescue'),\n",
+              " Row(call_type='Electrical Hazard'),\n",
+              " Row(call_type='Industrial Accidents'),\n",
+              " Row(call_type='Medical Incident'),\n",
+              " Row(call_type='Smoke Investigation (Outside)'),\n",
+              " Row(call_type='Train / Rail Incident')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "3. Find out all responses or delayed times greater than 5 mins.\n"
+      ],
+      "metadata": {
+        "id": "MVe9oxKN1-nJ"
+      }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_NpjnY-jVgGc"
+        "id": "YAnMVK0T2g_c"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. What are the most common call types?\n"
+      ],
+      "metadata": {
+        "id": "Pm6uwrs_2BjD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6FjLnKjW2hd3"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. What zip codes accounted for the common calls?\n"
+      ],
+      "metadata": {
+        "id": "Wj6m9hjS2ExV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "O3E5eLwK2iHA"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. What San Francisco neighborhood are in the zip codes 94102 and 94103?\n"
+      ],
+      "metadata": {
+        "id": "CYXp5FBL2GZq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IWSMlGg22ils"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. What was the sum of all calls, average, min, and max of the call response times?\n"
+      ],
+      "metadata": {
+        "id": "sojA0MF72IWR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "V9htYaFI2lcD"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8. How many distinct years of data are in the CSV file?\n"
+      ],
+      "metadata": {
+        "id": "uJqcIkw42J4v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "PaagJCZP2jOD"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9. What week of the year in 2018 had the most fire calls?\n"
+      ],
+      "metadata": {
+        "id": "xtgiWkwb2LcU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "E5nE9_FP2jt8"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10. What neighborhoods in San Francisco had the worst response time in 2018?"
+      ],
+      "metadata": {
+        "id": "noQTN48_2M3J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "V4WikGWA2kNk"
+      },
+      "execution_count": 6,
       "outputs": []
     }
   ]
