--- a/Microproject.ipynb
+++ b/Microproject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1v2v7samFM-5hM97SLMOye3Rcz99FsCN1",
-      "authorship_tag": "ABX9TyN8pqVnhnpVtURMWjt6XCDV",
+      "authorship_tag": "ABX9TyOuzidEGnlvkoeQAtHxJow8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,8 +44,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install --upgrade pip\n",
-        "!pip install pyspark\n",
+        "!pip install -q --upgrade pip -q\n",
+        "!pip install -q pyspark\n",
         "\n",
         "from pyspark.sql import *\n",
         "from pyspark import SparkFiles\n",
@@ -58,36 +58,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rIOUJctw-7g4",
-        "outputId": "491c7496-58db-4393-ec7c-390e533cb263"
+        "outputId": "92e4e6df-e107-4364-87b9-0b3691ae5983"
       },
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pip in /usr/local/lib/python3.10/dist-packages (23.1.2)\n",
-            "Collecting pip\n",
-            "  Downloading pip-24.0-py3-none-any.whl (2.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pip\n",
-            "  Attempting uninstall: pip\n",
-            "    Found existing installation: pip 23.1.2\n",
-            "    Uninstalling pip-23.1.2:\n",
-            "      Successfully uninstalled pip-23.1.2\n",
-            "Successfully installed pip-24.0\n",
-            "Collecting pyspark\n",
-            "  Downloading pyspark-3.5.1.tar.gz (317.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.0/317.0 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+            "\u001b[0mRequirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.5.1)\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
-            "Building wheels for collected packages: pyspark\n",
-            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.5.1-py2.py3-none-any.whl size=317488491 sha256=a8afa547df589730d551ddd4163053d39dd4104dfe25bd08742ddf145c8353b3\n",
-            "  Stored in directory: /root/.cache/pip/wheels/80/1d/60/2c256ed38dddce2fdd93be545214a63e02fbd8d74fb0b7f3a6\n",
-            "Successfully built pyspark\n",
-            "Installing collected packages: pyspark\n",
-            "Successfully installed pyspark-3.5.1\n",
             "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
@@ -587,6 +568,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "### 4. What are the most common call types?\n"
       ],
       "metadata": {
@@ -634,7 +620,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. What zip codes accounted for the common calls?\n"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### 5. What zip codes accounted for the common calls?\n"
       ],
       "metadata": {
         "id": "Wj6m9hjS2ExV"
@@ -701,7 +692,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6. What San Francisco neighborhood are in the zip codes 94102 and 94103?\n"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### 6. What San Francisco neighborhood are in the zip codes 94102 and 94103?\n"
       ],
       "metadata": {
         "id": "CYXp5FBL2GZq"
@@ -748,6 +744,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "### 7. What was the sum of all calls, average, min, and max of the call response times?\n"
       ],
       "metadata": {
@@ -815,7 +816,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "8. How many distinct years of data are in the CSV file?\n"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### 8. How many distinct years of data are in the CSV file?\n"
       ],
       "metadata": {
         "id": "uJqcIkw42J4v"
@@ -823,17 +829,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "spark.sql(\"SELECT DISTINCT EXTRACT(YEAR FROM call_date) AS Year FROM global_temp.fire_department\").show()"
+      ],
       "metadata": {
-        "id": "PaagJCZP2jOD"
+        "id": "PaagJCZP2jOD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dda35dc7-48d0-4352-83c1-a58dbeea8b50"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+\n",
+            "|Year|\n",
+            "+----+\n",
+            "|2006|\n",
+            "+----+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "9. What week of the year in 2018 had the most fire calls?\n"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### 9. What week of the year in 2018 had the most fire calls?\n"
       ],
       "metadata": {
         "id": "xtgiWkwb2LcU"
@@ -841,17 +872,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "spark.sql(\"SELECT DISTINCT EXTRACT(WEEK FROM call_date) AS Week, COUNT(call_number) AS Total_fire_calls FROM global_temp.fire_department WHERE call_type IN ('Structure Fire / Smoke in Building', 'Vehicle Fire', 'Outside Fire' ) GROUP BY EXTRACT(WEEK FROM call_date)\").show()"
+      ],
       "metadata": {
-        "id": "E5nE9_FP2jt8"
+        "id": "E5nE9_FP2jt8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b4a7d9d-f2bd-4f45-c20e-9f1f8479724e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+----------------+\n",
+            "|Week|Total_fire_calls|\n",
+            "+----+----------------+\n",
+            "|  47|              50|\n",
+            "|  45|              44|\n",
+            "|  46|              65|\n",
+            "+----+----------------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "10. What neighborhoods in San Francisco had the worst response time in 2018?"
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "### 10. What neighborhoods in San Francisco had the worst response time in 2018?"
       ],
       "metadata": {
         "id": "noQTN48_2M3J"
@@ -859,9 +916,57 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "spark.sql(\"SELECT neighborhoods_analysis_boundaries, ROUND(AVG(DATEDIFF(minute, received_dttm, response_dttm)), 2) AS Time_Response_min FROM global_temp.fire_department GROUP BY neighborhoods_analysis_boundaries ORDER BY AVG(DATEDIFF(minute, received_dttm, response_dttm)) DESC \").show()"
+      ],
+      "metadata": {
+        "id": "V4WikGWA2kNk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68520d0d-7313-4777-ff43-dfdb04fe7985"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------------------+-----------------+\n",
+            "|neighborhoods_analysis_boundaries|Time_Response_min|\n",
+            "+---------------------------------+-----------------+\n",
+            "|                      North Beach|             6.94|\n",
+            "|              Castro/Upper Market|             5.63|\n",
+            "|                     Inner Sunset|              5.0|\n",
+            "|                       Twin Peaks|             4.86|\n",
+            "|                        Japantown|              4.8|\n",
+            "|             Oceanview/Merced/...|             4.58|\n",
+            "|                      Mission Bay|             4.44|\n",
+            "|                   Haight Ashbury|             4.14|\n",
+            "|                         Nob Hill|             4.14|\n",
+            "|                     Hayes Valley|             4.13|\n",
+            "|                     Lincoln Park|              4.0|\n",
+            "|                        Chinatown|             3.94|\n",
+            "|             Bayview Hunters P...|             3.71|\n",
+            "|               West of Twin Peaks|             3.41|\n",
+            "|                           Marina|              3.4|\n",
+            "|                   Outer Richmond|             3.32|\n",
+            "|                          Mission|             3.32|\n",
+            "|                  Sunset/Parkside|              3.3|\n",
+            "|                 Presidio Heights|             3.18|\n",
+            "|                     Potrero Hill|             3.15|\n",
+            "+---------------------------------+-----------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "V4WikGWA2kNk"
+        "id": "7jP6hTqlGLps"
       },
       "execution_count": null,
       "outputs": []
